--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ after_success:
   - docker build -t tkartik/multi-client ./client
   - docker build -t tkartik/multi-nginx ./nginx
   - docker build -t tkartik/multi-server ./server
-  - docker build -t tkartik/mult-worker ./worker
+  - docker build -t tkartik/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password-stdin
   - docker push tkartik/multi-client
   - docker push tkartik/multi-nginx
