--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,14 @@ after_success:
   - docker push tkartik/multi-server
   - docker push tkartik/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-2'
+  app: 'multi-docker'
+  env: 'Multidocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-488940189911'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
